Fix footer display on safari mobile

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ main > canvas {
 footer {
   background: rgb(255,255,255);
   flex: 1;
+  z-index: 1;
 }
 
 footer .btn:hover {
